# camoufox-nix

./: .gitignore  LICENSE  README.md  flake.nix
camoufox-launcher/: cli.py  pyproject.toml
pkgs/: camoufox-bin.nix  camoufox-launcher.nix
